added dev mode to docker, there is a problem with tsoa when serving from dis
