# public/swagger.json
@@ -6,88 +6,6 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"PipelineStatus": {
-				"properties": {
-					"type": {
-						"type": "string"
-					},
-					"label": {
-						"type": "string"
-					},
-					"id": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"type",
-					"label",
-					"id"
-				],
-				"type": "object"
-			},
-			"Pipeline": {
-				"properties": {
-					"dateUpdated": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"dateCreated": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"createdBy": {
-						"type": "string"
-					},
-					"updatedBy": {
-						"type": "string"
-					},
-					"statuses": {
-						"items": {
-							"$ref": "#/components/schemas/PipelineStatus"
-						},
-						"type": "array"
-					},
-					"organizationId": {
-						"type": "string"
-					},
-					"name": {
-						"type": "string"
-					},
-					"id": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"dateUpdated",
-					"dateCreated",
-					"createdBy",
-					"updatedBy",
-					"statuses",
-					"organizationId",
-					"name",
-					"id"
-				],
-				"type": "object"
-			},
-			"DataResponse_Pipeline_": {
-				"properties": {
-					"total": {
-						"type": "number",
-						"format": "double"
-					},
-					"items": {
-						"items": {
-							"$ref": "#/components/schemas/Pipeline"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"total",
-					"items"
-				],
-				"type": "object"
-			},
 			"Opportunity": {
 				"properties": {
 					"dateUpdated": {
@@ -199,6 +117,88 @@
 					"items"
 				],
 				"type": "object"
+			},
+			"PipelineStatus": {
+				"properties": {
+					"type": {
+						"type": "string"
+					},
+					"label": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"type",
+					"label",
+					"id"
+				],
+				"type": "object"
+			},
+			"Pipeline": {
+				"properties": {
+					"dateUpdated": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"dateCreated": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"createdBy": {
+						"type": "string"
+					},
+					"updatedBy": {
+						"type": "string"
+					},
+					"statuses": {
+						"items": {
+							"$ref": "#/components/schemas/PipelineStatus"
+						},
+						"type": "array"
+					},
+					"organizationId": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"dateUpdated",
+					"dateCreated",
+					"createdBy",
+					"updatedBy",
+					"statuses",
+					"organizationId",
+					"name",
+					"id"
+				],
+				"type": "object"
+			},
+			"DataResponse_Pipeline_": {
+				"properties": {
+					"total": {
+						"type": "number",
+						"format": "double"
+					},
+					"items": {
+						"items": {
+							"$ref": "#/components/schemas/Pipeline"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"total",
+					"items"
+				],
+				"type": "object"
 			}
 		},
 		"securitySchemes": {}
@@ -217,28 +217,6 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/pipelines": {
-			"get": {
-				"operationId": "GetAll",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/DataResponse_Pipeline_"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Pipelines"
-				],
-				"security": [],
-				"parameters": []
-			}
-		},
 		"/opportunities": {
 			"get": {
 				"operationId": "GetFiltered",
@@ -268,6 +246,28 @@
 						}
 					}
 				]
+			}
+		},
+		"/pipelines": {
+			"get": {
+				"operationId": "GetAll",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/DataResponse_Pipeline_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Pipelines"
+				],
+				"security": [],
+				"parameters": []
 			}
 		}
 	},
